# openagent-go

./: .gitignore  BUGS.md  DESIGN.md  DESIGN.zh.md  README.md  README.zh.md  agent.go  doc.go  go.mod  go.sum  message.go  model.go  observer.go  options.go  prompt.go  runner.go  sandbox.go  session.go  team.go  tool.go
acp/: client.go  commands.go  compat.go  mcp_gate_test.go  server.go  types.go
acp/sdk/: server.go  server_concurrency_test.go  types.go
cmd/cli/: Cargo.toml  DESIGN.md  DESIGN.zh.md  README.md  README.zh.md  main.go  main_test.go
cmd/iac-mcp/: main.go
cmd/tui/: main.go
examples/acp/: main.go
examples/artifact/: main.go
examples/backend/: main.go
examples/basic/: main.go
examples/browser-agent/: main.go
examples/delegate/: main.go
examples/guard/: main.go
examples/hooks/: main.go
examples/iac/: README.md  agents.go  main.go
examples/mcp-client/: main.go
examples/memory/: main.go
examples/observer/: main.go
examples/plugin/: Makefile  main.go
examples/sandbox/: main.go
examples/skill/: main.go
examples/stream/: main.go
examples/team/: main.go
examples/webui/: index.html  main.go
mcp/: client.go
plan/: plan.go  planner.go  tool.go
plugin/pdk/rust/: Cargo.toml
plugin/pdk/rust/src/: export.rs  host.rs  lib.rs  types.rs
process/: manager.go  manager_test.go
rest/: handler.go  orchestrate_handler.go  plan_handler.go  session_manager.go  sse_disconnect_test.go  team.go  team_memory.go  team_model_test.go  types.go
slash/: slash.go
summarizer/: llm.go
tool/: file.go  grep.go  shell.go
(+112 files in other folders)
