[package]
name = "openagent-pdk"
version = "0.0.1"
edition = "2021"
description = "PDK for building WASM plugins for openagent-go"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
